--- a/adv_css_tables/css/styles.css
+++ b/adv_css_tables/css/styles.css
@@ -44,7 +44,7 @@ nav li a {
     font-weight: bold;
     color: gray;
     text-decoration: none;
-    border: 2px solid gray;
+    border: 2px solid orangered;
     border-radius: 10px;
     margin: 0 30px;
 }
@@ -52,7 +52,7 @@ nav li a {
 nav li a:hover {
     background-color: gray;
     color: black;
-    border: 2px solid gray;
+    border: 2px solid orangered;
 }
 
 
@@ -101,8 +101,9 @@ footer {
      }
 
 table {
+    width: 450px;
+    height: 450px;
     margin: auto;
-    width: 450px; height: 450px auto;
     border: 4px solid black;
     padding: 5px;    
     }
